[package]
name = "ccs811"
version = "0.1.2"
authors = ["Thomas Schlage <t.schlage@gmx.net>"]
edition = "2018"
license = "GPL-3.0"
description = "A library to use the CCS811 air quality sensor on raspberry pi"
repository = "https://github.com/fragsalat/rust-ccs811"
documentation = "https://docs.rs/ccs811"
readme = "README.md"
categories = ["embedded", "hardware-support"]
keywords = ["raspberry", "pi", "air-quality", "sensor", "adafruit"]

[dependencies]
rppal = "0.11.3"
